syntax = "proto3";

package v1;

import "tagger/tagger.proto";

option go_package = "./v1;v1_pb";

message AccountResponse{
    int32 id = 1;
    string username = 3;
    string email = 4;
    string avatar = 2;
    string name = 5;
    string surname = 6;
    int32 gender = 7;
    string birthday = 8;
    string about = 9;
}

message AccountDetailUpdateRequest{
    string avatar = 1;
    string name = 2 [(tagger.tags) = "binding:\"required,max=30\""];
    string surname = 3 [(tagger.tags) = "binding:\"required,max=30\""];
    int32 gender = 4 [(tagger.tags) = "binding:\"oneof=0 1 2\""];
    string birthday = 5 [(tagger.tags) = "binding:\"max=10\""];
    string about = 6 [(tagger.tags) = "binding:\"max=255\""];
}

message AccountDetailUpdateResponse{}

message AccountUsernameUpdateRequest{
    string username = 1 [(tagger.tags) = "binding:\"required,min=3,max=20\""];
}

message AccountUsernameUpdateResponse{}

message AccountEmailUpdateRequest{
    string email = 1 [(tagger.tags) = "binding:\"required\""];
}

message AccountEmailUpdateResponse{}
